<resources>
    <string name="app_name">Ohtel</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_member">New member? </string>
    <string name="sign_up">SIGNUP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="have_account">Have Account ?</string>
    <string name="dashboard">Dashboard</string>
    <string name="all">Sale/Rent/Lease</string>
    <string name="second_tab">Used Equipments</string>
    <string name="third">New Equipments</string>
    <string name="fourth">Vendors</string>
    <string name="fifth">Importers/Exporters</string>
    <string name="sixth">Jobs</string>
    <string name="seventh">Job Hunters</string>
    <string name="eighth">Special Services</string>
    <string name="restaurant_sale">Restaurant for sale /Rent/Lease.</string>
    <string name="restaurant_sale_more_than_30_rooms">Hotel For sale more than 30 Rooms.</string>
    <string name="restaurant_sale_less_than_30_rooms">Hotel For sale less than 30 Rooms.</string>
    <string name="grocery">Grocery</string>
    <string name="meat">Meat</string>
    <string name="vegitables">Vegetables</string>
    <string name="dairy">Dairy</string>
    <string name="exciotic_things">Exciotic things</string>
    <string name="other_things">Other things</string>
    <string name="user_name">User Name</string>
    <string name="version">VERSION - 1.0.0</string>
    <string name="used_equipment">Used Equipment</string>
    <string name="new_equipment">New Equipments</string>
    <string name="venders">Venders</string>
    <string name="importer_exporter">Importer/Exporter</string>
    <string name="jobs">Jobs</string>
    <string name="self_job_requirements">Self Job Requirement/Job Agency/Jobs Consultant</string>
    <string name="emial_id">contact@ohtel.com</string>
    <string name="toll_free_number">8105993124</string>
    <string name="logout">Logout</string>
    <string name="item_details">Item Details</string>
    <string name="loading">Please wait...</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="pls_enter_first_name">Please enter First name</string>
    <string name="pls_enter_last_name">Please enter Last name</string>
    <string name="password_not_matches">Password not matching</string>
    <string name="special_services">Special Services</string>
    <string name="add_job">Add Job</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="contact_no">Contact Number</string>
    <string name="job_name">Job Name</string>
    <string name="no_position">No of Position</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="qualification">Qualification</string>
    <string name="last_date">Last Date</string>
    <string name="pls_enter_last_date">Please enter Last date</string>
    <string name="pls_enter_qualification">Please enter Qualification</string>
    <string name="pls_enter_address">Please enter Address</string>
    <string name="pls_enter_location">Please enter Location</string>
    <string name="pls_enter_no_position">Please enter no of Position</string>
    <string name="pls_enter_job_name">Please enter Job Name</string>
    <string name="pls_enter_hotel_name">Please enter Hotel Name</string>
    <string name="pls_enter_contact_number">Please enter contact number</string>
    <string name="job_details">Job Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="restaurant_altr_no">Alternative Number</string>
    <string name="no_tabels">No of Tables</string>
    <string name="furnished_type">Furnished Type</string>
    <string name="restaurant_ac_non_ac">A/c non A/c</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="pls_restaurant_name">Please enter restaurant name</string>
    <string name="pls_altrno">Please enter alternative number</string>
    <string name="pls_noTables">Please enter no of Tables</string>
    <string name="add_image">Add Image</string>
    <string name="no_rooms">No of Rooms</string>
    <string name="no_dulex_room">No of Dulex Room</string>
    <string name="no_suit_room">No of Suit Room</string>
    <string name="ac_rooms">A/c Rooms</string>
    <string name="built_up_area">Built up Area</string>
    <string name="lift_available">Lift Available</string>
    <string name="gym_attached">Gym Attached</string>
    <string name="wifi_provided">wifi_provided</string>
    <string name="pls_enter_no_rooms">Please enter no of rooms</string>
    <string name="pls_enter_no_dulex_room">Please enter no of dulex room</string>
    <string name="pls_enter_suit_room">Please enter no of suit rooms</string>
    <string name="pls_enter_ac_rooms">Please  enter A/c rooms</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="shop_name">Shop Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="land_mark">Landmark</string>
    <string name="items">fruits, vegetables, provision</string>
    <string name="enter_shop_name">Please enter shop name</string>
    <string name="enter_country">Please enter country</string>
    <string name="enter_city">Please enter city</string>
    <string name="enter_landmark">Please enter landmark</string>
    <string name="enter_items">Please enter items</string>
    <string name="_items">Items</string>
    <string name="home_delivery">Home Delivery</string>
</resources>
