<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:layout_margin="@dimen/dimens_10"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.AppCompatImageView
        android:src="@drawable/ohtel_logo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dimens_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:hint="@string/last_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dimens_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:inputType="text"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dimens_5"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dimens_5"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_register"
      android:text="@string/register"
      android:background="@color/colorPrimary"
      android:textColor="@color/white"
      android:layout_marginTop="@dimen/dimens_30"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:text="@string/login"
            android:layout_width="@dimen/dimens_70"
            android:layout_marginLeft="@dimen/dimens_10"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="@dimen/dimens_30" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
</ScrollView>