<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_margin="@dimen/dimens_20"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.screens.login.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:src="@drawable/ohtel_logo"
        android:layout_marginBottom="@dimen/dimens_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:inputType="text"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimens_10"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_12"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:fontFamily="@font/roboto_medium" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_member"
            app:fontFamily="@font/roboto_medium" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_signup"
            android:text="@string/sign_up"
            android:layout_width="@dimen/dimens_100"
            android:background="@color/colorAccent"
            android:layout_marginLeft="@dimen/dimens_5"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="@dimen/dimens_35" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>